--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
     <h1>Let's play!</h1>
     <h2>Rock Paper Scissors</h2>
     <script>
+        //array with the choices
+        const choices = ["Rock", "Paper", "Scissors"];
+
+        //Return a random value of the choices array
+        function computerPlay(){
+            return choices[Math.floor(Math.random() * 3)];
+        }
 
     </script>
 </body>
